--- a/main/src/ca/uwaterloo/flix/language/phase/typer/PrimitiveEffects.Classes.json
+++ b/main/src/ca/uwaterloo/flix/language/phase/typer/PrimitiveEffects.Classes.json
@@ -8,6 +8,7 @@
     "java.lang.Float": "",
     "java.lang.Integer": "",
     "java.lang.Long": "",
+    "java.lang.Number": "",
     "java.lang.Short": "",
 
     "java.lang.Process": "Exec, IO",
