--- a/main/src/ca/uwaterloo/flix/language/phase/typer/PrimitiveEffects.Classes.json
+++ b/main/src/ca/uwaterloo/flix/language/phase/typer/PrimitiveEffects.Classes.json
@@ -10,7 +10,7 @@
     "java.lang.Long": "",
     "java.lang.Number": "",
     "java.lang.Short": "",
-
+    "java.lang.ClassLoader": "Exec, Sys, IO",
     "java.lang.Process": "Exec, IO",
     "java.lang.ProcessBuilder": "Exec, IO",
     "java.lang.ProcessHandle": "Exec, IO",
