feat: add annotation to java time

--- a/main/src/ca/uwaterloo/flix/language/phase/typer/PrimitiveEffects.Packages.json
+++ b/main/src/ca/uwaterloo/flix/language/phase/typer/PrimitiveEffects.Packages.json
@@ -4,6 +4,7 @@
     "java.lang.ref": "Sys, IO",
     "java.lang.reflect": "Sys, IO",
     "java.net": "Net, IO",
+    "java.time": "NonDet, IO",
     "java.util.random": "NonDet, IO"
   }
 }
