refactor: remove `Env`, `Exec`, `FsRead`, `FsWrite`, `Net`, `Sys`

--- a/main/src/ca/uwaterloo/flix/language/phase/typer/PrimitiveEffects.Methods.json
+++ b/main/src/ca/uwaterloo/flix/language/phase/typer/PrimitiveEffects.Methods.json
@@ -1,61 +1,5 @@
 {
   "methods": {
-    "java.lang.Boolean::getBoolean": "Env, IO",
-    "java.lang.Byte::describeConstable": "Sys, IO",
-    "java.lang.Double::resolveConstantDesc": "Sys, IO",
-    "java.lang.Float::resolveConstantDesc": "Sys, IO",
-    "java.lang.Integer::describeConstable": "Sys, IO",
-    "java.lang.Integer::getInteger": "Env, IO",
-    "java.lang.Integer::resolveConstantDesc": "Sys, IO",
-    "java.lang.Long::describeConstable": "Sys, IO",
-    "java.lang.Long::getLong": "Env, IO",
-    "java.lang.Long::resolveConstantDesc": "Sys, IO",
-    "java.lang.Short::describeConstable": "Sys, IO",
-
-    "java.lang.ClassLoader::getDefinedPackage": "IO",
-    "java.lang.ClassLoader::getDefinedPackages": "IO",
-    "java.lang.ClassLoader::getName": "IO",
-    "java.lang.ClassLoader::getPackages": "IO",
-    "java.lang.ClassLoader::getParent": "IO",
-    "java.lang.ClassLoader::getPlatformClassloader": "Sys, IO",
-    "java.lang.ClassLoader::getResource": "FsRead, IO",
-    "java.lang.ClassLoader::getResourceAsStream": "FsRead, IO",
-    "java.lang.ClassLoader::getResources": "FsRead, IO",
-    "java.lang.ClassLoader::getSystemClassLoader": "Env, IO",
-    "java.lang.ClassLoader::getSystemResource": "Env, FsRead, IO",
-    "java.lang.ClassLoader::getSystemResourceAsStream": "Env, FsRead, IO",
-    "java.lang.ClassLoader::getSystemResources": "Env, FsRead, IO",
-    "java.lang.ClassLoader::getUnnamedModule": "IO",
-    "java.lang.ClassLoader::isRegisteredAsParallelCapable": "IO",
-    "java.lang.ClassLoader::loadClass": "Sys, IO",
-    "java.lang.ClassLoader::resources": "FsRead, IO",
-    "java.lang.ClassLoader::setClassAssertionStatus": "Sys, IO",
-    "java.lang.ClassLoader::setDefaultAssertionStatus": "Sys, IO",
-    "java.lang.ClassLoader::setPackageAssertionStatus": "Sys, IO",
-
-    "java.lang.Runtime::addShutdownHook": "Exec, Sys, IO",
-    "java.lang.Runtime::availableProcessors": "Env, IO",
-    "java.lang.Runtime::exec": "Env, Exec, IO",
-    "java.lang.Runtime::exit": "Sys, IO",
-    "java.lang.Runtime::freeMemory": "Env, NonDet, IO",
-    "java.lang.Runtime::gc": "IO",
-    "java.lang.Runtime::getRuntime": "IO",
-    "java.lang.Runtime::halt": "Sys, IO",
-    "java.lang.Runtime::load": "Exec, Sys, IO",
-    "java.lang.Runtime::loadLibrary": "Exec, Sys, IO",
-    "java.lang.Runtime::maxMemory": "Env, IO",
-    "java.lang.Runtime::removeShutdownHook": "Sys, IO",
-    "java.lang.Runtime::runFinalization": "Sys, IO",
-    "java.lang.Runtime::totalMemory": "Env, NonDet, IO",
-    "java.lang.Runtime::version": "Env",
-    "java.lang.System::console": "IO",
-    "java.lang.System::currentTimeMillis": "IO",
-    "java.lang.System::getenv": "Env, IO",
-    "java.lang.System::nanoTime": "IO",
-
-    "java.math.BigInteger::probablePrime": "NonDet, IO",
-
-    "java.net.http.HttpClient::send": "Net, IO",
-    "java.net.http.HttpClient::sendAsync": "Net, IO"
+    "java.lang.Runtime::version": ""
   }
 }
