--- a/main/src/ca/uwaterloo/flix/language/phase/typer/PrimitiveEffects.Classes.json
+++ b/main/src/ca/uwaterloo/flix/language/phase/typer/PrimitiveEffects.Classes.json
@@ -3,50 +3,11 @@
     "java.lang.Boolean": "",
     "java.lang.Byte": "",
     "java.lang.Character": "",
-    "java.lang.Character$Subset": "",
     "java.lang.Double": "",
     "java.lang.Float": "",
     "java.lang.Integer": "",
     "java.lang.Long": "",
     "java.lang.Number": "",
-    "java.lang.Short": "",
-    "java.lang.ClassLoader": "Exec, Sys, IO",
-    "java.lang.Process": "Exec, IO",
-    "java.lang.ProcessBuilder": "Exec, IO",
-    "java.lang.ProcessHandle": "Exec, IO",
-
-    "java.lang.reflect.Constructor": "Sys, IO",
-    "java.lang.reflect.Executable": "Sys, IO",
-    "java.lang.reflect.Field": "Sys, IO",
-    "java.lang.reflect.InvocationHandler": "Sys, IO",
-    "java.lang.reflect.Member": "Sys, IO",
-
-    "java.lang.invoke.CallSite": "Sys, IO",
-    "java.lang.invoke.MethodHandle": "Sys, IO",
-    "java.lang.invoke.MethodHandles": "Sys, IO",
-    "java.lang.invoke.VarHandle": "Sys, IO",
-
-    "java.net.Authenticator": "Net, IO",
-    "java.net.DatagramSocket": "Net, IO",
-    "java.net.HttpURLConnection": "Net, IO",
-    "java.net.InetAddress": "Net, IO",
-    "java.net.MulticastSocket": "Net, IO",
-    "java.net.NetMulticastSocket": "Net, IO",
-    "java.net.NetworkInterface": "Net, IO",
-    "java.net.ProxySelector": "Net, IO",
-    "java.net.ResponseCache": "Net, IO",
-    "java.net.ServerSocket": "Net, IO",
-    "java.net.Socket": "Net, IO",
-    "java.net.URL": "Net, IO",
-    "java.net.URLClassLoader": "Net, Sys, IO",
-    "java.net.URLConnection": "Net, IO",
-    "java.net.URLStreamHandler": "Net, IO",
-    "java.net.spi.InetAddressResolverProvider": "Net, IO",
-    "java.net.spi.URLStreamHandlerProvider": "Net, IO",
-
-    "java.lang.Runtime": "Sys, IO",
-    "java.lang.StackWalker": "Sys, IO",
-    "java.lang.System": "Sys, IO",
-    "java.util.Random": "NonDet, IO"
+    "java.lang.Short": ""
   }
 }
