refactor: reduce usage of `unsafe`

--- a/main/src/ca/uwaterloo/flix/language/phase/typer/PrimitiveEffects.Methods.json
+++ b/main/src/ca/uwaterloo/flix/language/phase/typer/PrimitiveEffects.Methods.json
@@ -1,8 +1,19 @@
 {
   "methods": {
     "java.lang.Runtime::version": "",
+    "java.math.BigDecimal::abs": "",
+    "java.math.BigDecimal::compareTo": "",
     "java.math.BigDecimal::doubleValue": "",
     "java.math.BigDecimal::floatValue": "",
+    "java.math.BigDecimal::intValue": "",
+    "java.math.BigDecimal::longValue": "",
+    "java.math.BigDecimal::pow": "",
+    "java.math.BigDecimal::precision": "",
+    "java.math.BigDecimal::scale": "",
+    "java.math.BigDecimal::setScale": "",
+    "java.math.BigDecimal::signum": "",
+    "java.math.BigDecimal::toBigInteger": "",
+    "java.math.BigDecimal::toPlainString": "",
     "java.math.BigInteger::and": "",
     "java.math.BigInteger::bitLength": "",
     "java.math.BigInteger::byteValueExact": "",
