refactor: reduce usage of `unsafe`

--- a/main/src/ca/uwaterloo/flix/language/phase/typer/PrimitiveEffects.Methods.json
+++ b/main/src/ca/uwaterloo/flix/language/phase/typer/PrimitiveEffects.Methods.json
@@ -20,6 +20,23 @@
     "java.lang.Short::parseShort": "",
     "java.lang.Short::valueOf": "",
     "java.lang.String::concat": "",
+    "java.lang.String::endsWith": "",
+    "java.lang.String::equals": "",
+    "java.lang.String::indexOf": "",
+    "java.lang.String::isEmpty": "",
+    "java.lang.String::lastIndexOf": "",
+    "java.lang.String::length": "",
+    "java.lang.String::toLowerCase": "",
+    "java.lang.String::toUpperCase": "",
+    "java.lang.String::matches": "",
+    "java.lang.String::repeat": "",
+    "java.lang.String::replace": "",
+    "java.lang.String::replaceAll": "",
+    "java.lang.String::replaceFirst": "",
+    "java.lang.String::split": "",
+    "java.lang.String::startsWith": "",
+    "java.lang.String::substring": "",
+    "java.lang.String::trim": "",
     "java.math.BigDecimal::abs": "",
     "java.math.BigDecimal::add": "",
     "java.math.BigDecimal::compareTo": "",
@@ -43,6 +60,7 @@
     "java.math.BigInteger::and": "",
     "java.math.BigInteger::bitLength": "",
     "java.math.BigInteger::byteValueExact": "",
+    "java.math.BigInteger::compareTo": "",
     "java.math.BigInteger::divide": "",
     "java.math.BigInteger::intValueExact": "",
     "java.math.BigInteger::longValueExact": "",
