refactor: reduce usage of `unsafe`

--- a/main/src/ca/uwaterloo/flix/language/phase/typer/PrimitiveEffects.Methods.json
+++ b/main/src/ca/uwaterloo/flix/language/phase/typer/PrimitiveEffects.Methods.json
@@ -35,6 +35,7 @@
     "java.lang.String::replaceFirst": "",
     "java.lang.String::split": "",
     "java.lang.String::startsWith": "",
+    "java.lang.String::strip": "",
     "java.lang.String::substring": "",
     "java.lang.String::trim": "",
     "java.math.BigDecimal::abs": "",
