--- a/main/src/ca/uwaterloo/flix/language/phase/typer/PrimitiveEffects.Methods.json
+++ b/main/src/ca/uwaterloo/flix/language/phase/typer/PrimitiveEffects.Methods.json
@@ -1,5 +1,81 @@
 {
   "methods": {
-    "java.lang.Runtime::version": ""
+    "java.lang.Byte::longValue": "",
+    "java.lang.Byte::parseByte": "",
+    "java.lang.Byte::valueOf": "",
+    "java.lang.Double::parseDouble": "",
+    "java.lang.Float::parseFloat": "",
+    "java.lang.Integer::longValue": "",
+    "java.lang.Integer::parseInt": "",
+    "java.lang.Integer::valueOf": "",
+    "java.lang.Long::parseLong": "",
+    "java.lang.Long::valueOf": "",
+    "java.lang.Math::abs": "",
+    "java.lang.Math::ceil": "",
+    "java.lang.Math::exp": "",
+    "java.lang.Math::floor": "",
+    "java.lang.Math::rint": "",
+    "java.lang.Runtime::version": "",
+    "java.lang.Short::longValue": "",
+    "java.lang.Short::parseShort": "",
+    "java.lang.Short::valueOf": "",
+    "java.lang.String::concat": "",
+    "java.lang.String::endsWith": "",
+    "java.lang.String::equals": "",
+    "java.lang.String::indexOf": "",
+    "java.lang.String::isEmpty": "",
+    "java.lang.String::lastIndexOf": "",
+    "java.lang.String::length": "",
+    "java.lang.String::toLowerCase": "",
+    "java.lang.String::toUpperCase": "",
+    "java.lang.String::matches": "",
+    "java.lang.String::repeat": "",
+    "java.lang.String::replace": "",
+    "java.lang.String::replaceAll": "",
+    "java.lang.String::replaceFirst": "",
+    "java.lang.String::split": "",
+    "java.lang.String::startsWith": "",
+    "java.lang.String::strip": "",
+    "java.lang.String::substring": "",
+    "java.lang.String::trim": "",
+    "java.math.BigDecimal::abs": "",
+    "java.math.BigDecimal::add": "",
+    "java.math.BigDecimal::compareTo": "",
+    "java.math.BigDecimal::divide": "",
+    "java.math.BigDecimal::doubleValue": "",
+    "java.math.BigDecimal::floatValue": "",
+    "java.math.BigDecimal::intValue": "",
+    "java.math.BigDecimal::longValue": "",
+    "java.math.BigDecimal::multiply": "",
+    "java.math.BigDecimal::negate": "",
+    "java.math.BigDecimal::pow": "",
+    "java.math.BigDecimal::precision": "",
+    "java.math.BigDecimal::scale": "",
+    "java.math.BigDecimal::setScale": "",
+    "java.math.BigDecimal::signum": "",
+    "java.math.BigDecimal::subtract": "",
+    "java.math.BigDecimal::toBigInteger": "",
+    "java.math.BigDecimal::toPlainString": "",
+    "java.math.BigDecimal::valueOf": "",
+    "java.math.BigInteger::add": "",
+    "java.math.BigInteger::and": "",
+    "java.math.BigInteger::bitLength": "",
+    "java.math.BigInteger::byteValueExact": "",
+    "java.math.BigInteger::compareTo": "",
+    "java.math.BigInteger::divide": "",
+    "java.math.BigInteger::intValueExact": "",
+    "java.math.BigInteger::longValueExact": "",
+    "java.math.BigInteger::multiply": "",
+    "java.math.BigInteger::negate": "",
+    "java.math.BigInteger::not": "",
+    "java.math.BigInteger::or": "",
+    "java.math.BigInteger::pow": "",
+    "java.math.BigInteger::remainder": "",
+    "java.math.BigInteger::shiftLeft": "",
+    "java.math.BigInteger::shiftRight": "",
+    "java.math.BigInteger::shortValueExact": "",
+    "java.math.BigInteger::subtract": "",
+    "java.math.BigInteger::valueOf": "",
+    "java.math.BigInteger::xor": ""
   }
 }
