refactor: remove usage of `unsafe`

--- a/main/src/ca/uwaterloo/flix/language/phase/typer/PrimitiveEffects.Methods.json
+++ b/main/src/ca/uwaterloo/flix/language/phase/typer/PrimitiveEffects.Methods.json
@@ -19,9 +19,12 @@
     "java.lang.Runtime::availableProcessors": "",
     "java.lang.Runtime::getRuntime": "",
     "java.lang.Runtime::version": "",
+    "java.lang.System::lineSeparator": "",
     "java.lang.Short::longValue": "",
     "java.lang.Short::parseShort": "",
     "java.lang.Short::valueOf": "",
+    "java.lang.String::charAt": "",
+    "java.lang.String::codePointAt": "",
     "java.lang.String::compareTo": "",
     "java.lang.String::concat": "",
     "java.lang.String::endsWith": "",
