--- a/main/src/ca/uwaterloo/flix/language/phase/typer/PrimitiveEffects.Methods.json
+++ b/main/src/ca/uwaterloo/flix/language/phase/typer/PrimitiveEffects.Methods.json
@@ -4,6 +4,7 @@
     "java.lang.Byte::parseByte": "",
     "java.lang.Byte::valueOf": "",
     "java.lang.Double::parseDouble": "",
+    "java.lang.Exception::getMessage": "",
     "java.lang.Float::parseFloat": "",
     "java.lang.Integer::longValue": "",
     "java.lang.Integer::parseInt": "",
@@ -15,13 +16,20 @@
     "java.lang.Math::exp": "",
     "java.lang.Math::floor": "",
     "java.lang.Math::rint": "",
+    "java.lang.Runtime::availableProcessors": "",
+    "java.lang.Runtime::getRuntime": "",
     "java.lang.Runtime::version": "",
+    "java.lang.System::lineSeparator": "",
     "java.lang.Short::longValue": "",
     "java.lang.Short::parseShort": "",
     "java.lang.Short::valueOf": "",
+    "java.lang.String::charAt": "",
+    "java.lang.String::codePointAt": "",
+    "java.lang.String::compareTo": "",
     "java.lang.String::concat": "",
     "java.lang.String::endsWith": "",
     "java.lang.String::equals": "",
+    "java.lang.String::hashCode": "",
     "java.lang.String::indexOf": "",
     "java.lang.String::isEmpty": "",
     "java.lang.String::lastIndexOf": "",
@@ -44,6 +52,7 @@
     "java.math.BigDecimal::divide": "",
     "java.math.BigDecimal::doubleValue": "",
     "java.math.BigDecimal::floatValue": "",
+    "java.math.BigDecimal::hashCode": "",
     "java.math.BigDecimal::intValue": "",
     "java.math.BigDecimal::longValue": "",
     "java.math.BigDecimal::multiply": "",
@@ -56,6 +65,7 @@
     "java.math.BigDecimal::subtract": "",
     "java.math.BigDecimal::toBigInteger": "",
     "java.math.BigDecimal::toPlainString": "",
+    "java.math.BigDecimal::toString": "",
     "java.math.BigDecimal::valueOf": "",
     "java.math.BigInteger::add": "",
     "java.math.BigInteger::and": "",
@@ -63,6 +73,7 @@
     "java.math.BigInteger::byteValueExact": "",
     "java.math.BigInteger::compareTo": "",
     "java.math.BigInteger::divide": "",
+    "java.math.BigInteger::hashCode": "",
     "java.math.BigInteger::intValueExact": "",
     "java.math.BigInteger::longValueExact": "",
     "java.math.BigInteger::multiply": "",
@@ -75,7 +86,21 @@
     "java.math.BigInteger::shiftRight": "",
     "java.math.BigInteger::shortValueExact": "",
     "java.math.BigInteger::subtract": "",
+    "java.math.BigInteger::toString": "",
     "java.math.BigInteger::valueOf": "",
-    "java.math.BigInteger::xor": ""
+    "java.math.BigInteger::xor": "",
+    "java.util.Map$Entry::getKey": "",
+    "java.util.Map$Entry::getValue": "",
+    "java.util.Optional::get": "",
+    "java.util.Optional::isPresent": "",
+    "java.util.concurrent.locks.ReentrantLock::isFair": "",
+    "java.util.Objects::isNull": "",
+    "java.util.regex.Pattern::compile": "",
+    "java.util.regex.Pattern::flags": "",
+    "java.util.regex.Pattern::matcher": "",
+    "java.util.regex.Pattern::pattern": "",
+    "java.util.regex.Pattern::quote": "",
+    "java.util.regex.Pattern::split": "",
+    "java.util.regex.Pattern::toString": ""
   }
 }
